<resources>
    <string name="app_name">IlfumoClient</string>
    <string name="product_item_descr">Product item image</string>
    <string name="product_item_name">Жидкость Freaky Squeezy Fresh and Sweet Salaad</string>
    <string name="product_item_price">490 р.</string>
    <string name="product_item_volume_header">Объем:</string>
    <string name="product_item_volume">120 мл</string>
    <string name="product_item_strength_header">Крепость:</string>
    <string name="product_item_strength">3 мг/мл</string>
    <string name="ic_filter_button">Кнопка настроек поиска</string>
    <string name="ic_sort_button">Кнопка настроек сортировки</string>
    <string name="range_start">от</string>
    <string name="range_end">до</string>
    <string name="price_label">Цена:</string>
    <string name="filter_button_show">Показать</string>
    <string name="sort_dialog_header">Сортировать</string>
    <string name="sort_dialog_sort_price">По Цене</string>
    <string name="sort_dialog_sort_price_desc">По Цене (по убыванию)</string>
    <string name="sort_dialog_sort_volume">По Объему</string>
    <string name="sort_dialog_sort_volume_desc">По Объему (по убыванию)</string>
    <string name="sort_dialog_sort_strength">По Крепости</string>
    <string name="sort_dialog_sort_strength_desc">По Крепости (по убыванию)</string>
    <string name="rubble_sign"> ₽</string>
    <string name="mg_ml"> мг/мл</string>
    <string name="ml"> мл</string>


    <string name="sample_product_description">\t\tЖидкость для электронных сигарет Ugly Butter производства американской компании.
        <b>Bad Drip</b> — это ароматная булочка, приправленная банановым пудингом, толстым слоем сахарной пудры и щепоткой корицы.
        \n\t\t\Насыщенный, очень сладкий десертный вкус сочетает в себе банановый пудинг, который ярко переливается вместе с белоснежной пудрой и пряной корицей.
        Трио удачно дополняет выпечку и выигрышно ощущается вместе — этот десерт достоин ваших похвал!
        Десерт Ugly Butter — мечта любого сладкоежки. Изысканный вкус — удовольствие, перед которым невозможно устоять. Жижа непременно зайдет ценителям десертов!</string>
</resources>