<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sort_dialog_header"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_sort_price" />

        <RadioButton
            android:id="@+id/rb_price_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_sort_price_desc" />

        <RadioButton
            android:id="@+id/rb_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_sort_volume" />

        <RadioButton
            android:id="@+id/rb_volume_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_sort_volume_desc" />

        <RadioButton
            android:id="@+id/rb_strength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_sort_strength" />

        <RadioButton
            android:id="@+id/rb_strength_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_sort_strength_desc" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>