<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="350dp">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/product_item_name"
            android:textAlignment="center"
            android:textSize="@dimen/item_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/product_item_price"
            android:textSize="@dimen/item_price_size"
            app:layout_constraintStart_toEndOf="@+id/product_item_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

        <ImageView
            android:id="@+id/product_item_image"
            android:src="@mipmap/ic_launcher"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/product_item_descr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_volume_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_item_volume_header"
            app:layout_constraintStart_toEndOf="@+id/product_item_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_price" />

        <TextView
            android:id="@+id/tv_strength_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_item_strength_header"
            app:layout_constraintStart_toEndOf="@+id/product_item_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_volume_header" />

        <TextView
            android:id="@+id/tv_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_item_volume"
            app:layout_constraintStart_toEndOf="@+id/tv_volume_header"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_price" />

        <TextView
            android:id="@+id/tv_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_item_strength"
            app:layout_constraintStart_toEndOf="@+id/tv_strength_header"
            app:layout_constraintTop_toBottomOf="@+id/tv_volume" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>