<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="15dp"/>

        <Spinner
            android:id="@+id/spinner_store"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_city"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/tv_label_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="28dp"
            android:text="@string/product_item_volume_header"
            android:textSize="@dimen/filter_label_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <TextView
            android:id="@+id/tv_labe_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="24dp"
            android:text="@string/product_item_strength_header"
            android:textSize="@dimen/filter_label_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_volume" />

        <TextView
            android:id="@+id/tv_label_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_label"
            android:textSize="@dimen/filter_label_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labe_strength" />

        <EditText
            android:id="@+id/et_volume_start"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/range_start"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/tv_label_volume"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <EditText
            android:id="@+id/et_volume_end"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/range_end"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/et_volume_start"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <EditText
            android:id="@+id/et_strength_start"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/range_start"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/tv_label_volume"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <EditText
            android:id="@+id/et_strength_end"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/range_end"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/et_strength_start"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <EditText
            android:id="@+id/et_price_start"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/range_start"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/tv_label_volume"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <EditText
            android:id="@+id/et_price_end"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/range_end"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/et_price_start"
            app:layout_constraintTop_toBottomOf="@+id/spinner_store" />

        <Button
            android:id="@+id/btn_filter_ok"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/filter_button_show"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_price_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
